java11用のプロファイル作成 (#32)