@@ -17,7 +17,7 @@
   <parent>
     <groupId>com.nablarch</groupId>
     <artifactId>nablarch-parent</artifactId>
-    <version>5u14</version>
+    <version>5u15-SNAPSHOT</version>
   </parent>
   
   <properties>
@@ -26,11 +26,17 @@
   
   <profiles>
     <profile>
-      <id>java9</id>
+      <id>java11</id>
       <properties>
-        <junit.additionalArgLine>--add-modules java.xml.bind</junit.additionalArgLine>
         <jboss.marshalling.version>2.0.2.Final</jboss.marshalling.version>
       </properties>
+      <dependencies>
+        <dependency>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+          <version>2.3.1</version>
+        </dependency>
+      </dependencies>
       <build>
         <plugins>
           <plugin>
